feat: 내가 다녀온 단지의 다른 인사이트 목록 조회 API 연동

--- a/app/src/main/res/layout/item_insight_horizontal.xml
+++ b/app/src/main/res/layout/item_insight_horizontal.xml
@@ -17,7 +17,7 @@
         <ImageView
             android:id="@+id/iv_insight"
             bindCornerRadius="@{4}"
-            bindImage="@{item.thumbnail}"
+            bindImage="@{item.mainImage}"
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:importantForAccessibility="no"
@@ -62,7 +62,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="2dp"
-                    android:text="@{item.region}"
+                    android:text="@{item.address.toGuDong()}"
                     android:textColor="@color/gray_700"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintLeft_toRightOf="@id/iv_insight_region"
@@ -78,7 +78,7 @@
                 android:background="@drawable/sr_orange50_all2"
                 android:paddingHorizontal="8dp"
                 android:paddingVertical="4dp"
-                android:text="@{`추천 ` + item.recommendCount}"
+                android:text="@{`추천 ` + item.recommendedCount}"
                 android:textColor="@color/orange_500"
                 app:layout_constraintLeft_toRightOf="@id/cl_insight_region"
                 app:layout_constraintTop_toTopOf="parent"
