--- a/app/src/main/res/layout/item_insight_detail_my_insight.xml
+++ b/app/src/main/res/layout/item_insight_detail_my_insight.xml
@@ -46,7 +46,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="2dp"
-                android:text="@{item.insightVo.region}"
+                android:text="@{item.insightVo.address.toGuDong()}"
                 android:textColor="@color/gray_700"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintLeft_toRightOf="@id/iv_insight_region"
@@ -62,7 +62,7 @@
             android:background="@drawable/sr_orange50_all2"
             android:paddingHorizontal="8dp"
             android:paddingVertical="4dp"
-            android:text="@{`추천 ` + item.insightVo.recommendCount}"
+            android:text="@{`추천 ` + item.insightVo.recommendedCount}"
             android:textColor="@color/orange_500"
             app:layout_constraintLeft_toRightOf="@id/cl_insight_region"
             app:layout_constraintTop_toTopOf="parent"
