--- a/app/src/main/res/layout/item_insight_vertical.xml
+++ b/app/src/main/res/layout/item_insight_vertical.xml
@@ -21,7 +21,7 @@
         <ImageView
             android:id="@+id/iv_insight"
             bindCornerRadius="@{4}"
-            bindImage="@{item.thumbnail}"
+            bindImage="@{item.mainImage}"
             android:layout_width="200dp"
             android:layout_height="160dp"
             android:importantForAccessibility="no"
@@ -58,7 +58,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="2dp"
-                android:text="@{item.region}"
+                android:text="@{item.address.toGuDong()}"
                 android:textColor="@color/gray_700"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintLeft_toRightOf="@id/iv_insight_region"
@@ -74,7 +74,7 @@
             android:background="@drawable/sr_orange50_all2"
             android:paddingHorizontal="8dp"
             android:paddingVertical="4dp"
-            android:text="@{`추천 ` + item.recommendCount}"
+            android:text="@{`추천 ` + item.recommendedCount}"
             android:textColor="@color/orange_500"
             app:layout_constraintLeft_toRightOf="@id/cl_insight_region"
             app:layout_constraintTop_toTopOf="@id/cl_insight_region"
