--- a/app/src/main/res/layout/activity_visit_complex_insight_list.xml
+++ b/app/src/main/res/layout/activity_visit_complex_insight_list.xml
@@ -92,5 +92,20 @@
             app:layout_constraintTop_toBottomOf="@id/tv_visit_complex_insight_count"
             tools:itemCount="10"
             tools:listitem="@layout/item_insight_horizontal" />
+
+        <TextView
+            style="@style/T_500_14_19_6"
+            bindVisible="@{viewModel.visitedAptComplexInsights.size() == 0}"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="20dp"
+            android:layout_marginTop="12dp"
+            android:background="@drawable/sr_dash_gray50_gray100_all8"
+            android:gravity="center"
+            android:paddingVertical="16dp"
+            android:text="@string/home_insight_empty_message"
+            android:textColor="@color/gray_500"
+            android:visibility="gone"
+            app:layout_constraintTop_toBottomOf="@id/tv_visit_complex_insight_count" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
