--- a/app/src/main/res/layout/fragment_home_search.xml
+++ b/app/src/main/res/layout/fragment_home_search.xml
@@ -185,7 +185,7 @@
                     <androidx.recyclerview.widget.RecyclerView
                         android:id="@+id/rv_home_visited_apt_complex_insight"
                         bindItemList="@{viewModel.visitedAptComplexInsights}"
-                        bindVisible="@{viewModel.visitedAptComplexes.size() > 0}"
+                        bindVisible="@{viewModel.visitedAptComplexInsights.size() > 0}"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="24dp"
@@ -200,7 +200,7 @@
 
                     <TextView
                         style="@style/T_500_14_19_6"
-                        bindVisible="@{viewModel.visitedAptComplexes.size() == 0}"
+                        bindVisible="@{viewModel.visitedAptComplexInsights.size() == 0}"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginHorizontal="20dp"
@@ -211,7 +211,7 @@
                         android:text="@string/home_insight_empty_message"
                         android:textColor="@color/gray_500"
                         android:visibility="gone"
-                        app:layout_constraintTop_toBottomOf="@id/tv_home_visited_apt_complex_insight_subject" />
+                        app:layout_constraintTop_toBottomOf="@id/rv_home_visited_apt_complex" />
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
                 <View
