feat: 인사이트 작성 ViewPager 스와이프 막기

--- a/app/src/main/res/layout/activity_write_insight.xml
+++ b/app/src/main/res/layout/activity_write_insight.xml
@@ -261,7 +261,7 @@
 
         <androidx.viewpager2.widget.ViewPager2
             android:id="@+id/vp_write_insight"
-            bindUserInputEnabled="@{true}"
+            bindUserInputEnabled="@{false}"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             app:layout_constraintBottom_toTopOf="@id/cl_write_button"
