--- a/app/src/main/res/layout/activity_insight_detail.xml
+++ b/app/src/main/res/layout/activity_insight_detail.xml
@@ -93,11 +93,10 @@
 
                         <ImageView
                             android:id="@+id/iv_insight_detail_cover"
-                            bindImage="@{viewModel.insight.basicInfo.thumbnail}"
+                            bindImage="@{viewModel.insight.mainImage}"
                             android:layout_width="match_parent"
                             android:layout_height="300dp"
                             android:importantForAccessibility="no"
-                            android:src="@{viewModel.insight.basicInfo.thumbnail}"
                             app:layout_constraintTop_toTopOf="parent"
                             tools:scaleType="centerCrop"
                             tools:src="@drawable/img_apt_sample" />
@@ -113,7 +112,7 @@
 
                             <ImageView
                                 android:id="@+id/iv_insight_detail_profile"
-                                bindImage="@{viewModel.insight.profileImage}"
+                                bindImage="@{null}"
                                 bindPlaceHolder="@{@drawable/ic_profile}"
                                 android:layout_width="32dp"
                                 android:layout_height="32dp"
@@ -128,7 +127,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginStart="4dp"
-                                android:text="@{viewModel.insight.nickname}"
+                                android:text="@{`홍길동`}"
                                 android:textColor="@color/gray_700"
                                 app:layout_constraintBottom_toBottomOf="@id/cl_insight_detail_recommend"
                                 app:layout_constraintStart_toEndOf="@id/iv_insight_detail_profile"
@@ -164,7 +163,7 @@
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:layout_marginStart="2dp"
-                                    android:text="@{`추천 ` + viewModel.insight.recommendCount}"
+                                    android:text="@{`추천 ` + viewModel.insight.recommendedCount}"
                                     android:textColor="@color/gray_700"
                                     app:layout_constraintBottom_toBottomOf="parent"
                                     app:layout_constraintEnd_toEndOf="parent"
@@ -178,7 +177,7 @@
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:layout_marginStart="2dp"
-                                    android:text="@{`추천 ` + viewModel.insight.recommendCount}"
+                                    android:text="@{`추천 ` + viewModel.insight.recommendedCount}"
                                     android:textColor="@color/orange_500"
                                     android:visibility="gone"
                                     app:layout_constraintBottom_toBottomOf="parent"
@@ -194,7 +193,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginTop="8dp"
-                                android:text="@{viewModel.insight.basicInfo.title}"
+                                android:text="@{viewModel.insight.title}"
                                 android:textColor="@color/gray_900"
                                 app:layout_constraintStart_toStartOf="parent"
                                 app:layout_constraintTop_toBottomOf="@id/cl_insight_detail_recommend"
@@ -284,6 +283,7 @@
         </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
         <View
+            bindVisible="@{viewModel.insightDetailState != InsightDetailState.MY_INSIGHT}"
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:background="@drawable/gradient_gray25_100"
@@ -291,6 +291,7 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/cl_insight_detail_buttons"
+            bindVisible="@{viewModel.insightDetailState != InsightDetailState.MY_INSIGHT}"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingHorizontal="20dp"
@@ -300,11 +301,11 @@
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/btn_insight_detail_state"
                 style="@style/T_600_16_22_4"
-                bindVisible="@{viewModel.insightDetailState != InsightDetailState.ExchangeRequested}"
+                bindVisible="@{viewModel.insightDetailState != InsightDetailState.EXCHANGE_REQUESTED}"
                 android:layout_width="0dp"
                 android:layout_height="56dp"
                 android:background="@drawable/bg_complete_button"
-                android:enabled="@{viewModel.insightDetailState == InsightDetailState.ExchangeRequest}"
+                android:enabled="@{viewModel.insightDetailState == InsightDetailState.EXCHANGE_REQUEST}"
                 android:onClick="@{() -> viewModel.onClickExchangeRequestButton()}"
                 android:stateListAnimator="@null"
                 android:text="@{viewModel.insightDetailState.text}"
@@ -317,7 +318,7 @@
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/btn_exchange_reject"
                 style="@style/T_600_16_22_4"
-                bindVisible="@{viewModel.insightDetailState == InsightDetailState.ExchangeRequested}"
+                bindVisible="@{viewModel.insightDetailState == InsightDetailState.EXCHANGE_REQUESTED}"
                 android:layout_width="0dp"
                 android:layout_height="56dp"
                 android:background="@drawable/sr_white_orange500_all8"
@@ -333,7 +334,7 @@
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/btn_exchange_accept"
                 style="@style/T_600_16_22_4"
-                bindVisible="@{viewModel.insightDetailState == InsightDetailState.ExchangeRequested}"
+                bindVisible="@{viewModel.insightDetailState == InsightDetailState.EXCHANGE_REQUESTED}"
                 android:layout_width="0dp"
                 android:layout_height="56dp"
                 android:layout_marginStart="10dp"
