--- a/app/src/main/res/layout/item_insight_detail_good_news.xml
+++ b/app/src/main/res/layout/item_insight_detail_good_news.xml
@@ -17,7 +17,7 @@
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        bindMarginBottom="@{viewModel.insightDetailState == InsightDetailState.ExchangeComplete ? 40 : 0}"
+        bindMarginBottom="@{viewModel.insightDetailState == InsightDetailState.MY_INSIGHT ? 40 : 0}"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingHorizontal="20dp"
@@ -35,7 +35,7 @@
 
         <com.google.android.material.chip.ChipGroup
             android:id="@+id/cg_traffic"
-            bindInsightDetailChips="@{item.goodNews.traffic}"
+            bindInsightDetailChips="@{item.goodNews.traffics}"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
@@ -79,7 +79,7 @@
 
         <com.google.android.material.chip.ChipGroup
             android:id="@+id/cg_development"
-            bindInsightDetailChips="@{item.goodNews.development}"
+            bindInsightDetailChips="@{item.goodNews.developments}"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
@@ -122,7 +122,7 @@
 
         <com.google.android.material.chip.ChipGroup
             android:id="@+id/cg_education"
-            bindInsightDetailChips="@{item.goodNews.education}"
+            bindInsightDetailChips="@{item.goodNews.educations}"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
@@ -165,7 +165,7 @@
 
         <com.google.android.material.chip.ChipGroup
             android:id="@+id/cg_natural_environment"
-            bindInsightDetailChips="@{item.goodNews.naturalEnvironment}"
+            bindInsightDetailChips="@{item.goodNews.naturalEnvironments}"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
@@ -208,7 +208,7 @@
 
         <com.google.android.material.chip.ChipGroup
             android:id="@+id/cg_culture"
-            bindInsightDetailChips="@{item.goodNews.culture}"
+            bindInsightDetailChips="@{item.goodNews.cultures}"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
@@ -251,7 +251,7 @@
 
         <com.google.android.material.chip.ChipGroup
             android:id="@+id/cg_industry"
-            bindInsightDetailChips="@{item.goodNews.industry}"
+            bindInsightDetailChips="@{item.goodNews.industries}"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
@@ -294,7 +294,7 @@
 
         <com.google.android.material.chip.ChipGroup
             android:id="@+id/cg_policy"
-            bindInsightDetailChips="@{item.goodNews.policy}"
+            bindInsightDetailChips="@{item.goodNews.policies}"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
