--- a/app/src/main/res/layout/item_insight_detail_apt_environment.xml
+++ b/app/src/main/res/layout/item_insight_detail_apt_environment.xml
@@ -241,6 +241,7 @@
         <TextView
             android:id="@+id/tv_review_subject"
             style="@style/T_500_14_19_6"
+            bindVisible="@{item.complexEnvironment.complexEnvironmentReview.length() > 0}"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="24dp"
@@ -251,6 +252,7 @@
 
         <TextView
             style="@style/T_500_16_22_4"
+            bindVisible="@{item.complexEnvironment.complexEnvironmentReview.length() > 0}"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
