feat: 보관함 주소 목록 조회 API 연동

--- a/app/src/main/res/layout/activity_insight_address.xml
+++ b/app/src/main/res/layout/activity_insight_address.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="viewModel"
-            type="info.imdang.imdang.ui.main.storage.region.InsightRegionViewModel" />
+            type="info.imdang.imdang.ui.main.storage.address.InsightAddressViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -16,7 +16,7 @@
         android:background="@color/gray_25">
 
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/cl_insight_region_top_bar"
+            android:id="@+id/cl_insight_address_top_bar"
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:layout_marginTop="8dp"
@@ -51,11 +51,11 @@
             android:layout_height="1dp"
             android:layout_marginTop="16dp"
             android:background="@color/gray_100"
-            app:layout_constraintTop_toBottomOf="@id/cl_insight_region_top_bar" />
+            app:layout_constraintTop_toBottomOf="@id/cl_insight_address_top_bar" />
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rv_insight_region"
-            bindItemList="@{viewModel.insightRegions}"
+            android:id="@+id/rv_insight_address"
+            bindItemList="@{viewModel.insightAddresses}"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:clipToPadding="false"
@@ -64,7 +64,7 @@
             app:layout_constraintBottom_toTopOf="@id/tv_select_complete_button"
             app:layout_constraintTop_toBottomOf="@id/view_divider"
             tools:itemCount="10"
-            tools:listitem="@layout/item_insight_region" />
+            tools:listitem="@layout/item_insight_address" />
 
         <TextView
             android:id="@+id/tv_select_complete_button"
