--- a/app/src/main/res/layout/fragment_storage.xml
+++ b/app/src/main/res/layout/fragment_storage.xml
@@ -93,7 +93,7 @@
         </Toolbar>
 
         <androidx.coordinatorlayout.widget.CoordinatorLayout
-            bindVisible="@{viewModel.insightRegions.size() > 0}"
+            bindVisible="@{viewModel.addresses.size() > 0}"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:background="@color/gray_25"
@@ -119,14 +119,14 @@
                         app:layout_collapseMode="none">
 
                         <androidx.constraintlayout.widget.ConstraintLayout
-                            android:id="@+id/cl_insight_region"
+                            android:id="@+id/cl_insight_address"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:paddingVertical="24dp"
                             app:layout_constraintTop_toTopOf="parent">
 
                             <TextView
-                                android:id="@+id/tv_region_page"
+                                android:id="@+id/tv_address_page"
                                 style="@style/T_600_14_19_6"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
@@ -134,40 +134,40 @@
                                 android:background="@drawable/sr_orange50_all100"
                                 android:paddingHorizontal="8dp"
                                 android:paddingVertical="4dp"
-                                android:text="@{(viewModel.selectedInsightRegionPage + 1) + ` / ` + viewModel.insightRegions.size()}"
+                                android:text="@{(viewModel.selectedInsightAddressPage + 1) + ` / ` + viewModel.addresses.size()}"
                                 android:textColor="@color/orange_500"
                                 app:layout_constraintStart_toStartOf="parent"
                                 app:layout_constraintTop_toTopOf="parent"
                                 tools:text="1 / 4" />
 
                             <TextView
-                                android:id="@+id/tv_insight_region_see_all"
+                                android:id="@+id/tv_insight_address_see_all"
                                 style="@style/T_400_14_19_6"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginEnd="20dp"
                                 android:text="@string/see_all"
                                 android:textColor="@color/gray_700"
-                                app:layout_constraintBottom_toBottomOf="@id/tv_region_page"
+                                app:layout_constraintBottom_toBottomOf="@id/tv_address_page"
                                 app:layout_constraintEnd_toEndOf="parent"
-                                app:layout_constraintTop_toTopOf="@id/tv_region_page" />
+                                app:layout_constraintTop_toTopOf="@id/tv_address_page" />
 
                             <androidx.viewpager2.widget.ViewPager2
-                                android:id="@+id/vp_insight_region"
-                                bindViewPagerItemList="@{viewModel.insightRegions}"
+                                android:id="@+id/vp_insight_address"
+                                bindViewPagerItemList="@{viewModel.addresses}"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_marginTop="12dp"
                                 android:clipChildren="false"
                                 android:clipToPadding="false"
-                                app:layout_constraintTop_toBottomOf="@id/tv_region_page" />
+                                app:layout_constraintTop_toBottomOf="@id/tv_address_page" />
                         </androidx.constraintlayout.widget.ConstraintLayout>
 
                         <View
                             android:layout_width="match_parent"
                             android:layout_height="8dp"
                             android:background="@color/gray_50"
-                            app:layout_constraintTop_toBottomOf="@id/cl_insight_region" />
+                            app:layout_constraintTop_toBottomOf="@id/cl_insight_address" />
                     </androidx.constraintlayout.widget.ConstraintLayout>
                 </com.google.android.material.appbar.CollapsingToolbarLayout>
 
@@ -327,7 +327,7 @@
         </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
         <androidx.constraintlayout.widget.ConstraintLayout
-            bindVisible="@{viewModel.insightRegions.size() == 0}"
+            bindVisible="@{viewModel.addresses.size() == 0}"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:background="@color/gray_25"
