fix : bindingAdapter의 value에 bind prefix를 추가

--- a/app/src/main/res/layout/fragment_onboarding.xml
+++ b/app/src/main/res/layout/fragment_onboarding.xml
@@ -16,7 +16,7 @@
 
         <ImageView
             android:id="@+id/iv_onboarding"
-            imageResource="@{viewModel.imageRes}"
+            bindImageResource="@{viewModel.imageRes}"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_marginBottom="74dp"
